Closed Bug 1572639 Opened 5 years ago Closed 5 years ago

Fix [-Wreturn-std-move] warning on GV build

Categories

(Core :: Networking: HTTP, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla70
Tracking Status
firefox70 --- fixed

People

(Reporter: m_kato, Assigned: m_kato)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

35:44.69 warning: netwerk/protocol/http/nsHttpHandler.cpp:165:12 [-Wreturn-std-move] local variable 'deviceString' will be copied despite being returned by name
35:44.69 warning: netwerk/protocol/http/nsHttpHandler.cpp:167:10 [-Wreturn-std-move] local variable 'deviceModelId' will be copied despite being returned by name

Actually, compiler outputs the following warning for android build.

35:44.69 warning: netwerk/protocol/http/nsHttpHandler.cpp:165:12 [-Wreturn-std-move] local variable 'deviceString' will be copied despite being returned by name
35:44.69 warning: netwerk/protocol/http/nsHttpHandler.cpp:167:10 [-Wreturn-std-move] local variable 'deviceModelId' will be copied despite being returned by name

We should use std::move to fix this.

Priority: -- → P3
Whiteboard: [necko-triaged]
Pushed by m_kato@ga2.so-net.ne.jp:
https://hg.mozilla.org/integration/autoland/rev/687127545910
Use std::move to avoid -Wreturn-std-move warning. r=dragana
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: