Bug 1572639 - Use std::move to avoid -Wreturn-std-move warning. r=dragana

Actually, compiler outputs the following warning for android build.

```
35:44.69 warning: netwerk/protocol/http/nsHttpHandler.cpp:165:12 [-Wreturn-std-move] local variable 'deviceString' will be copied despite being returned by name
35:44.69 warning: netwerk/protocol/http/nsHttpHandler.cpp:167:10 [-Wreturn-std-move] local variable 'deviceModelId' will be copied despite being returned by name
```

We should use std::move to fix this.

Differential Revision: https://phabricator.services.mozilla.com/D41327